--- a/twitter-client/package.json
+++ b/twitter-client/package.json
@@ -13,6 +13,9 @@
     "framer-motion": "^3.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-firebaseui": "^4.1.0",
+    "react-google-button": "^0.7.2",
+    "react-google-login": "^5.2.2",
     "react-scripts": "4.0.2",
     "web-vitals": "^1.1.0"
   },
